# t2c-data-backend

./: .dockerignore  .env.example  .gitignore  CODEOWNERS  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.local.yml  infra.yaml  pyproject.toml  requirements.lock.txt
.helm/: Chart.yaml  values.yaml
alembic/: env.py
docker/: entrypoint.dev.sh
scripts/: audit_plaintext_secrets.py  backfill_certification_decision_events.py  backfill_dq_rule_latest_runs.py  backfill_metabase_lineage.py  backfill_privacy_review_events.py  backfill_table_row_counts.py  benchmark_core_endpoints.py  bootstrap_database.py  check_incidents_runtime.py  export_requirements_lock.sh  generate_bootstrap_sql.py  generate_persistence_dictionary_xlsx.py  generate_t2c_data_manual.py  migrate_catalog_database.py  reprocess_tag_intelligence_all.py  reset_bootstrap_admin_password.py  reset_installation.py  reset_passwords.py  reset_platform_data.py  reset_test_data.py  run_dq_worker.py  run_metabase_worker.py  run_platform_job_worker.py  seed_large_catalog.py  seed_large_dq_history.py  seed_large_incidents.py  unlock_mfa.py  validate_alembic_graph.py  verify_datasource_delete_isolation.py
spark-jobs/: datasource_scan_job.py  dq_common.py  dq_profiling_job.py  dq_rules_job.py
sql/: schema.sql
tests/: conftest.py  test_abac_policy.py  test_access_control_policy.py  test_admin_recovery.py  test_alembic_graph.py  test_alembic_safe_helpers.py  test_alerting.py  test_api_import_sweep.py  test_application_gateways.py  test_assistant.py  test_audit_access_log_sequence.py  (+147 more)
(+638 files in other folders)
